#16 | 🎓 Create onboarding flow